--- a/default.htm
+++ b/default.htm
@@ -9416,7 +9416,7 @@
             <!-- WARNING: ACCOUNT FOR RASBEE -->
               <div class="container-fluid account-container" id="account-rasbee">
                 <div class="account-box">
-                  <h3 class="text-primary">MISS DOROTHYYY HARBERttT</h3>
+                  <h3 class="text-primary">DOROTHY HARBERT</h3>
                   <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
 
                   <div class="row">
@@ -9475,21 +9475,6 @@
                         <div id="collapseOne" class="collapse show" data-parent="#accordion">
                           <div class="card-body">
                              <!-- WARNING: none -->
-                             <div class="row">
-                               <div class="col-xs-3">
-                                 <i class="fa fa-arrow-left text-danger"></i>
-                               </div>
-                               <div class="col-xs-3">
-                                 03/05/19
-                               </div>
-                               <div class="col-xs-3">
-                                 Victor A. Lewis
-                               </div>
-                               <div class="col-xs-3 text-danger">
-                                 15,000.00
-                               </div>
-                             </div>
-                             <hr>
                              <div class="row">
                                <div class="col-xs-3">
                                  <i class="fa fa-arrow-left text-danger"></i>
@@ -21870,7 +21855,7 @@
                   }, 2000);
                 }
                 // WARNING: RASBEE
-                else if (username ==  "ADMIN" && password == "ADMINS") {
+                else if (username ==  "dorothy_herbert" && password == "dhbert_n90") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
