--- a/default.htm
+++ b/default.htm
@@ -18953,7 +18953,7 @@
           <div class="container-fluid account-container" id="account-castty">
             <div class="account-box">
               <h3 class="text-primary">MR FRANK E. AUKTOR </h3>
-              <p class="text-danger text-small" > <i class="fa fa-warning"></i> Account Locked</p>
+              <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
 
               <div class="row">
                 <div class="col-xs-6">
