--- a/default.htm
+++ b/default.htm
@@ -22640,7 +22640,7 @@
 
                 }
                 // WARNING: CASTY THIRD ACCOUNT
-                else if (username ==  "ADMIN" && password == "ADMINN") {
+                else if (username ==  "frankauktor" && password == "fea13novber") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
@@ -22650,10 +22650,7 @@
                     $("#account-castty").fadeIn('slow');
                     $("#transaction-details-castty").show();
                     $("header .menu").show();
-
-
                   }, 2000);
-
                 }
 
                 // WARNING: DALLAS
