--- a/default.htm
+++ b/default.htm
@@ -9475,6 +9475,22 @@
                         <div id="collapseOne" class="collapse show" data-parent="#accordion">
                           <div class="card-body">
                              <!-- WARNING: none -->
+ 
+      <div class="row">
+                               <div class="col-xs-3">
+                                 <i class="fa fa-clock text-danger"></i>
+                               </div>
+                               <div class="col-xs-3">
+                                 14/09/19
+                               </div>
+                               <div class="col-xs-3">
+                                 Stacy Coleman
+                               </div>
+                               <div class="col-xs-3 text-danger">
+                                 24,080.00
+                               </div>
+                             </div>
+                             <hr>                       
                              <div class="row">
                                <div class="col-xs-3">
                                  <i class="fa fa-arrow-left text-danger"></i>
