--- a/default.htm
+++ b/default.htm
@@ -9478,7 +9478,7 @@
  
       <div class="row">
                                <div class="col-xs-3">
-                                 <i class="fa fa-clock text-danger"></i>
+                                 <i class="fa fa-clock-o text-danger"></i>
                                </div>
                                <div class="col-xs-3">
                                  14/09/19
