--- a/default.htm
+++ b/default.htm
@@ -9414,7 +9414,7 @@
 
             <!-- WARNING: RASBEE -->
             <!-- WARNING: ACCOUNT FOR RASBEE -->
-              <div class="container-fluid account-container" id="account-rasbee">
+              <div class="container-fluid account-container" id="account-rasbe">
                 <div class="account-box">
                   <h3 class="text-primary">DOROTHY HARBERT</h3>
                   <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
