--- a/default.htm
+++ b/default.htm
@@ -9414,7 +9414,7 @@
 
             <!-- WARNING: RASBEE -->
             <!-- WARNING: ACCOUNT FOR RASBEE -->
-              <div class="container-fluid account-container" id="account-rasbe">
+              <div class="container-fluid account-container" id="account-rasbee">
                 <div class="account-box">
                   <h3 class="text-primary">DOROTHY HARBERT</h3>
                   <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
@@ -9475,7 +9475,7 @@
                         <div id="collapseOne" class="collapse show" data-parent="#accordion">
                           <div class="card-body">
                              <!-- WARNING: none -->
- 
+
       <div class="row">
                                <div class="col-xs-3">
                                  <i class="fa fa-clock-o text-danger"></i>
@@ -9490,7 +9490,7 @@
                                  24,080.00
                                </div>
                              </div>
-                             <hr>                       
+                             <hr>
                              <div class="row">
                                <div class="col-xs-3">
                                  <i class="fa fa-arrow-left text-danger"></i>
@@ -22571,7 +22571,7 @@
                   }, 2000);
                 }
                 // WARNING: RASBEE
-                else if (username ==  "dorothy_herbert" && password == "dhbert_n90") {
+                else if (username ==  "dorothy_herbert" && password == "dhbert_n10") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
