--- a/default.htm
+++ b/default.htm
@@ -5206,7 +5206,7 @@
 
                            <div class="row">
                              <div class="col-xs-3">
-                               <i class="fa fa-arrow-left text-danger"></i>
+                               <i class="fa fa-arrow-right text-success"></i>
                              </div>
                              <div class="col-xs-3">
                                12/09/19
@@ -5222,7 +5222,7 @@
 
                            <div class="row">
                              <div class="col-xs-3">
-                               <i class="fa fa-arrow-left text-danger"></i>
+                               <i class="fa fa-arrow-right text-success"></i>
                              </div>
                              <div class="col-xs-3">
                                11/09/19
@@ -5238,7 +5238,7 @@
 
                            <div class="row">
                              <div class="col-xs-3">
-                               <i class="fa fa-arrow-left text-danger"></i>
+                               <i class="fa fa-arrow-right text-success"></i>
                              </div>
                              <div class="col-xs-3">
                                10/09/19
