--- a/default.htm
+++ b/default.htm
@@ -108,7 +108,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-dollar"></i> 508. <small class="text-success">00</small>  </h4>
-                    <p> <small>As at 13:39 on 01/07/19</small> </p>
+                    <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
 
@@ -119,7 +119,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-dollar"></i> 10,508. <small class="text-success">00</small>  </h4>
-                    <p> <small>As at 13:39 on 01/07/19</small> </p>
+                    <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
 
@@ -2593,7 +2593,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-dollar"></i> 215. <small class="text-success">20</small>  </h4>
-                    <p> <small>As at 13:39 on 01/07/19</small> </p>
+                    <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
 
@@ -2604,7 +2604,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-dollar"></i> 30,000. <small class="text-success">20</small>  </h4>
-                    <p> <small>As at 13:39 on 01/07/19</small> </p>
+                    <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
 
@@ -5165,7 +5165,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-gbp"></i> 120. <small class="text-success">20</small>  </h4>
-                    <p> <small>As at 13:39 on 01/07/19</small> </p>
+                    <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
 
@@ -5176,7 +5176,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-gbp"></i> 30,000. <small class="text-success">20</small>  </h4>
-                    <p> <small>As at 13:39 on 01/07/19</small> </p>
+                    <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
 
@@ -6054,7 +6054,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-gbp"></i> 120. <small class="text-success">20</small>  </h4>
-                    <p> <small>As at 13:39 on 01/07/19</small> </p>
+                    <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
 
@@ -6065,7 +6065,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-gbp"></i> 30,000. <small class="text-success">20</small>  </h4>
-                    <p> <small>As at 13:39 on 01/07/19</small> </p>
+                    <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
 
@@ -6922,7 +6922,7 @@
             <!-- WARNING: SHUTTO 3RD ACCOUNT -->
             <div class="container-fluid account-container" id="account-shuttooo">
               <div class="account-box">
-                <h3 class="text-primary">MR HELMUT K.B  BAUER NEIDERT</h3>
+                <h3 class="text-primary">Bruce Anderson</h3>
                 <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
 
                 <div class="row">
@@ -6931,7 +6931,7 @@
                     <p>007-895-412-3245</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-gbp"></i> 6,298,730. <small class="text-success">50</small></h4>
+                    <h4 class="text-success"><i class="fa fa-gbp"></i> 1,512,730. <small class="text-success">50</small></h4>
                     <p> <small>Available balance</small> </p>
                   </div>
                 </div>
@@ -6943,7 +6943,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-gbp"></i> 1,020. <small class="text-success">20</small>  </h4>
-                    <p> <small>As at 13:39 on 01/07/19</small> </p>
+                    <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
 
@@ -6954,7 +6954,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-gbp"></i> 30,000. <small class="text-success">20</small>  </h4>
-                    <p> <small>As at 13:39 on 01/07/19</small> </p>
+                    <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
 
@@ -6986,13 +6986,13 @@
                                <i class="fa fa-arrow-left text-danger"></i>
                              </div>
                              <div class="col-xs-3">
-                               03/05/19
+                               18/10/19
                              </div>
                              <div class="col-xs-3">
-                               Victor A. Lewis
+                               ATM CASH WITHDRAWAL
                              </div>
                              <div class="col-xs-3 text-danger">
-                               15,000.00
+                               20,000.00
                              </div>
                            </div>
                            <hr>
@@ -7001,13 +7001,13 @@
                                <i class="fa fa-arrow-left text-danger"></i>
                              </div>
                              <div class="col-xs-3">
-                               03/05/19
+                               16/10/19
                              </div>
                              <div class="col-xs-3">
-                               Victor A. Lewis
+                               POS PURCHASE (REMOTE-ON-US)-TRINIDAD HAYES
                              </div>
                              <div class="col-xs-3 text-danger">
-                               23,800.00
+                               15,800.00
                              </div>
                            </div>
                            <hr>
@@ -11915,7 +11915,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-dollar"></i> 508. <small class="text-success">00</small>  </h4>
-                    <p> <small>As at 13:39 on 01/07/19</small> </p>
+                    <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
 
@@ -11926,7 +11926,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-dollar"></i> 10,508. <small class="text-success">00</small>  </h4>
-                    <p> <small>As at 13:39 on 01/07/19</small> </p>
+                    <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
 
@@ -14400,7 +14400,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-gbp"></i> 508. <small class="text-success">00</small>  </h4>
-                    <p> <small>As at 13:39 on 01/07/19</small> </p>
+                    <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
 
@@ -14411,7 +14411,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-gbp"></i> 10,508. <small class="text-success">00</small>  </h4>
-                    <p> <small>As at 13:39 on 01/07/19</small> </p>
+                    <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
 
@@ -17628,7 +17628,7 @@
                 </div>
                 <div class="col-xs-6">
                   <h4 class="text-success"><i class="fa fa-gbp"></i> 215. <small class="text-success">20</small>  </h4>
-                  <p> <small>As at 13:39 on 01/07/19</small> </p>
+                  <p> <small>As at 13:39 on 01/10/19</small> </p>
                 </div>
               </div>
 
@@ -18301,7 +18301,7 @@
                 </div>
                 <div class="col-xs-6">
                   <h4 class="text-success"><i class="fa fa-gbp"></i> 215. <small class="text-success">20</small>  </h4>
-                  <p> <small>As at 13:39 on 01/07/19</small> </p>
+                  <p> <small>As at 13:39 on 01/10/19</small> </p>
                 </div>
               </div>
 
@@ -18973,7 +18973,7 @@
                 </div>
                 <div class="col-xs-6">
                   <h4 class="text-success"><i class="fa fa-gbp"></i> 215. <small class="text-success">20</small>  </h4>
-                  <p> <small>As at 13:39 on 01/07/19</small> </p>
+                  <p> <small>As at 13:39 on 01/10/19</small> </p>
                 </div>
               </div>
 
@@ -19646,7 +19646,7 @@
                 </div>
                 <div class="col-xs-6">
                   <h4 class="text-success"><i class="fa fa-usd"></i> 215. <small class="text-success">20</small>  </h4>
-                  <p> <small>As at 13:39 on 01/07/19</small> </p>
+                  <p> <small>As at 13:39 on 01/10/19</small> </p>
                 </div>
               </div>
 
@@ -20318,7 +20318,7 @@
                 </div>
                 <div class="col-xs-6">
                   <h4 class="text-success"><i class="fa fa-usd"></i> 215. <small class="text-success">20</small>  </h4>
-                  <p> <small>As at 13:39 on 01/07/19</small> </p>
+                  <p> <small>As at 13:39 on 01/10/19</small> </p>
                 </div>
               </div>
 
@@ -22515,7 +22515,7 @@
                   }, 2000);
                 }
                 // WARNING: SHUTTO 3RD ACCOUNT
-                else if (username ==  "neidert.helmut" && password == "vchbauer80") {
+                else if (username ==  "neidert.helmut" && password == "AN1950BRCE") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
