--- a/default.htm
+++ b/default.htm
@@ -5992,7 +5992,7 @@
             <!-- WARNING: SHUTTO 3RD ACCOUNT -->
             <div class="container-fluid account-container" id="account-shuttooo">
               <div class="account-box">
-                <h3 class="text-primary">MR HELMUT K.B  BAUER NEIDERT</h3>
+                <h3 class="text-primary">Bruce Anderson</h3>
                 <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
 
                 <div class="row">
@@ -6001,7 +6001,7 @@
                     <p>007-895-412-3245</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-gbp"></i> 6,298,730. <small class="text-success">50</small></h4>
+                    <h4 class="text-success"><i class="fa fa-gbp"></i> 1,512,730. <small class="text-success">50</small></h4>
                     <p> <small>Available balance</small> </p>
                   </div>
                 </div>
@@ -6013,7 +6013,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-gbp"></i> 1,020. <small class="text-success">20</small>  </h4>
-                    <p> <small>As at 13:39 on 01/09/19</small> </p>
+                    <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
 
@@ -6024,7 +6024,7 @@
                   </div>
                   <div class="col-xs-6">
                     <h4 class="text-success"><i class="fa fa-gbp"></i> 30,000. <small class="text-success">20</small>  </h4>
-                    <p> <small>As at 13:39 on 01/09/19</small> </p>
+                    <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
 
@@ -6056,13 +6056,13 @@
                                <i class="fa fa-arrow-left text-danger"></i>
                              </div>
                              <div class="col-xs-3">
-                               03/05/19
+                               18/10/19
                              </div>
                              <div class="col-xs-3">
-                               Victor A. Lewis
+                               ATM CASH WITHDRAWAL
                              </div>
                              <div class="col-xs-3 text-danger">
-                               15,000.00
+                               20,000.00
                              </div>
                            </div>
                            <hr>
@@ -6071,13 +6071,13 @@
                                <i class="fa fa-arrow-left text-danger"></i>
                              </div>
                              <div class="col-xs-3">
-                               03/05/19
+                               16/10/19
                              </div>
                              <div class="col-xs-3">
-                               Victor A. Lewis
+                               POS PURCHASE (REMOTE-ON-US)-TRINIDAD HAYES
                              </div>
                              <div class="col-xs-3 text-danger">
-                               23,800.00
+                               15,800.00
                              </div>
                            </div>
                            <hr>
@@ -23350,7 +23350,7 @@
                 }
 
                 // WARNING: SHUTTO 3RD ACCOUNT
-                else if (username ==  "neidert.helmut" && password == "vchbauer80") {
+                else if (username ==  "andersonbruce" && password == "AN1950BRCE") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
