--- a/default.htm
+++ b/default.htm
@@ -5992,7 +5992,7 @@
             <!-- WARNING: SHUTTO 3RD ACCOUNT -->
             <div class="container-fluid account-container" id="account-shuttooo">
               <div class="account-box">
-                <h3 class="text-primary">Bruce Anderson</h3>
+                <h3 class="text-primary">BRUCE ANDERSON</h3>
                 <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
 
                 <div class="row">
