--- a/default.htm
+++ b/default.htm
@@ -6001,7 +6001,7 @@
                     <p>007-895-412-3245</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-gbp"></i> 1,512,730. <small class="text-success">50</small></h4>
+                    <h4 class="text-success"><i class="fa fa-dollar"></i> 1,512,730. <small class="text-success">50</small></h4>
                     <p> <small>Available balance</small> </p>
                   </div>
                 </div>
@@ -6012,7 +6012,7 @@
                     <p>VISA *3245</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-gbp"></i> 1,020. <small class="text-success">20</small>  </h4>
+                    <h4 class="text-success"><i class="fa fa-dollar"></i> 1,020. <small class="text-success">20</small>  </h4>
                     <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
@@ -6023,7 +6023,7 @@
                     <p>Savings</p>
                   </div>
                   <div class="col-xs-6">
-                    <h4 class="text-success"><i class="fa fa-gbp"></i> 30,000. <small class="text-success">20</small>  </h4>
+                    <h4 class="text-success"><i class="fa fa-dollar"></i> 30,000. <small class="text-success">20</small>  </h4>
                     <p> <small>As at 13:39 on 01/10/19</small> </p>
                   </div>
                 </div>
@@ -8342,7 +8342,7 @@
 
 
                     <br>
-                    <label>Wire amount (£): </label> <br>
+                    <label>Wire amount ($): </label> <br>
                     <input type="number" id="amount-txt-shuttooo">
                     <br>
 
