--- a/default.htm
+++ b/default.htm
@@ -6062,7 +6062,7 @@
                                ATM CASH WITHDRAWAL
                              </div>
                              <div class="col-xs-3 text-danger">
-                               20,000.00
+                               2,000.00
                              </div>
                            </div>
                            <hr>
@@ -6074,10 +6074,10 @@
                                16/10/19
                              </div>
                              <div class="col-xs-3">
-                               POS PURCHASE (REMOTE-ON-US)-TRINIDAD HAYES
+                               ATM CASH WITHDRAWAL
                              </div>
                              <div class="col-xs-3 text-danger">
-                               15,800.00
+                               1,800.00
                              </div>
                            </div>
                            <hr>
