--- a/default.htm
+++ b/default.htm
@@ -5993,7 +5993,7 @@
             <div class="container-fluid account-container" id="account-shuttooo">
               <div class="account-box">
                 <h3 class="text-primary">BRUCE ANDERSON</h3>
-                <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
+                <p class="text-danger text-small" > <i class="fa fa-warning"></i> Account Locked</p>
 
                 <div class="row">
                   <div class="col-xs-6">
@@ -8368,13 +8368,8 @@
                         alert("Please enter correct figure");
                       } else {
                         // WARNING: SECURITY LOCK CONTROL PRANK''
-                        $("#transferbtn-shuttooo  ").hide();
-                        $("#loader-acc-shuttooo").show();
-                        setTimeout(function(){
-                          $("#loader-acc-shuttooo").hide();
-                          $("#transferCon-btn-shuttooo").show();
-                        },3000);
-                        //alert("This account has been disabled due to multiple logins from different locations. Please visit our nearest branch to rectify this issue");
+
+                        alert("This account has been disabled due to multiple logins from different locations. Please visit our nearest branch to rectify this issue");
                       }
                     } else {
                       $("#blank-warning-txt-shuttooo").show();
