--- a/default.htm
+++ b/default.htm
@@ -5993,7 +5993,7 @@
             <div class="container-fluid account-container" id="account-shuttooo">
               <div class="account-box">
                 <h3 class="text-primary">BRUCE ANDERSON</h3>
-                <p class="text-danger text-small" > <i class="fa fa-warning"></i> Account Locked</p>
+                <p class="text-danger text-small" > <i class="fa fa-warning"></i> Account Inactive</p>
 
                 <div class="row">
                   <div class="col-xs-6">
@@ -6121,7 +6121,7 @@
                               10/12/18
                             </div>
                             <div class="col-xs-3">
-                              Joan Jetkins
+                              Joan Jenins
                             </div>
                             <div class="col-xs-3 text-success">
                               100,000.00
