--- a/default.htm
+++ b/default.htm
@@ -5145,7 +5145,7 @@
             <div class="container-fluid account-container" id="account-evanns">
               <div class="account-box">
                 <h3 class="text-primary">MR DAVID GLOVER</h3>
-                <p class="text-danger text-small" > <i class="fa fa-warning"></i> Account Locked</p>
+                <p class="text-danger text-small" > <i class="fa fa-warning"></i> Account Inactive</p>
 
                 <div class="row">
                   <div class="col-xs-6">
@@ -6074,16 +6074,16 @@
                                16/01/19
                              </div>
                              <div class="col-xs-3">
-                               ATM CASH WITHDRAWAL 
+                               ATM CASH WITHDRAWAL
                              </div>
                              <div class="col-xs-3 text-danger">
                                1,800.00
                              </div>
                            </div>
                            <hr>
-                           
-                           
-   
+
+
+
                         </div>
                       </div>
                     </div>
