--- a/default.htm
+++ b/default.htm
@@ -10916,9 +10916,9 @@
 
             <!-- WARNING: RASBEE -->
             <!-- WARNING: ACCOUNT FOR RASBEE -->
-              <div class="container-fluid account-container" id="account-rasbee">
+              <div class="container-fluid account-container" id="account-percentage">
                 <div class="account-box">
-                  <h3 class="text-primary">DOROTHY HARBERT</h3>
+                  <h3 class="text-primary">KITSON BROOKS</h3>
                   <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
 
                   <div class="row">
@@ -10965,7 +10965,7 @@
                   </div>
                   <br>
 
-                  <div class="acc-option-box" id="transaction-details-rasbee">
+                  <div class="acc-option-box" id="transaction-details-percentage">
                     <div id="accordion" class="option-details-box">
 
                       <div class="card">
@@ -10978,7 +10978,7 @@
                           <div class="card-body">
                              <!-- WARNING: none -->
 
-      <div class="row">
+                             <div class="row">
                                <div class="col-xs-3">
                                  <i class="fa fa-arrow-left text-danger"></i>
                                </div>
@@ -10990,21 +10990,6 @@
                                </div>
                                <div class="col-xs-3 text-danger">
                                  24,080.00
-                               </div>
-                             </div>
-                             <hr>
-                             <div class="row">
-                               <div class="col-xs-3">
-                                 <i class="fa fa-arrow-left text-danger"></i>
-                               </div>
-                               <div class="col-xs-3">
-                                 03/05/19
-                               </div>
-                               <div class="col-xs-3">
-                                 Victor A. Lewis
-                               </div>
-                               <div class="col-xs-3 text-danger">
-                                 23,800.00
                                </div>
                              </div>
                              <hr>
@@ -23344,14 +23329,14 @@
                   }, 2000);
                 }
                 // WARNING: RASBEE
-                else if (username ==  "dorothy_herbert" && password == "dhbert_n10") {
+                else if (username ==  "brookskitson" && password == "brkskiti687") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
                   setTimeout(function(){
                     $(".loader").hide();
                     $("#login-container").hide();
-                    $("#account-rasbee").fadeIn('slow');
+                    $("#account-percentage").fadeIn('slow');
                     $("#transaction-details-rasbee").show();
                     $("header .menu").show();
                   }, 2000);
