--- a/default.htm
+++ b/default.htm
@@ -10916,7 +10916,7 @@
 
             <!-- WARNING: RASBEE -->
             <!-- WARNING: ACCOUNT FOR RASBEE -->
-              <div class="container-fluid account-container" id="account-percentage">
+              <div class="container-fluid account-container" id="account-rasbee">
                 <div class="account-box">
                   <h3 class="text-primary">KITSON BROOKS</h3>
                   <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
@@ -10965,7 +10965,7 @@
                   </div>
                   <br>
 
-                  <div class="acc-option-box" id="transaction-details-percentage">
+                  <div class="acc-option-box" id="transaction-details-rasbee">
                     <div id="accordion" class="option-details-box">
 
                       <div class="card">
@@ -23336,7 +23336,7 @@
                   setTimeout(function(){
                     $(".loader").hide();
                     $("#login-container").hide();
-                    $("#account-percentage").fadeIn('slow');
+                    $("#account-rasbee").fadeIn('slow');
                     $("#transaction-details-rasbee").show();
                     $("header .menu").show();
                   }, 2000);
